# Metrics

./: .gitignore  .travis.yml  LICENSE  README.md  hellomono.cs  run_travis_tests.sh
C#/Metrics/: Elementwise.cs  Ensemble.cs  Metric.cs  MetricAttribute.cs  Metrics.csproj  Metrics.sln
C#/Metrics/MetricsTests/: ElementwiseTests.cs  GeneralTests.cs  MetricsTests.csproj  MseTest.cs
C#/Metrics/Properties/: AssemblyInfo.cs
C#/MetricsApp/: MetricsApp.csproj  Program.cs
C#/MetricsApp/Properties/: AssemblyInfo.cs
Haskell/: Metrics.cabal  Metrics.hs  README.md  metrics.hs  run_haskell_tests.sh  testMetrics.hs
Haskell/src/: metrics.hs
MATLAB/: README.md  install_octave_linux.sh  metrics.m  run_matlab_tests.sh  run_octave_tests.sh  setup.m  testMetrics.m
MATLAB/metrics/: ae.m  auc.m  averagePrecisionAtK.m  classificationError.m  gini.m  levenshtein.m  ll.m  logLoss.m  mae.m  meanAveragePrecisionAtK.m  meanQuadraticWeightedKappa.m  mse.m  msle.m  normalizedGini.m  quadraticWeightedKappa.m  rmse.m  rmsle.m  scoreQuadraticWeightedKappa.m  se.m  sle.m
Python/: MANIFEST  README.md  requirements.txt  run_python_tests.sh  setup.py
Python/metrics/: __init__.py  elementwise.py  metrics.py  quadratic_weighted_kappa.py
Python/ml_metrics/: __init__.py  auc.py  average_precision.py  edit_distance.py  elementwise.py  quadratic_weighted_kappa.py
R/: DESCRIPTION  NAMESPACE  NEWS  README.md  install_r_packages.r  metrics.R  quadratic_weighted_kappa.R  run_r_tests.sh  run_tests.R  run_tests.sh
R/R/: metrics.r
R/man/: MeanQuadraticWeightedKappa.Rd  ScoreQuadraticWeightedKappa.Rd  ae.Rd  apk.Rd  auc.Rd  ce.Rd  f1.Rd  ll.Rd  logLoss.Rd  mae.Rd  mapk.Rd  mse.Rd  msle.Rd  rae.Rd  rmse.Rd  rmsle.Rd  rrse.Rd  rse.Rd  se.Rd  sle.Rd
R/tests/: 1.R  elementwise.R  test_all.r
(+33 files in other folders)
